# Eruku_korean_finetuning

./: .gitignore  README.md  eruku_continuous_inf.py  gen_korean_fontset.py  infer_show.py  korean_split_dataset.py  pyproject.toml  train_korean.py
assets/corpus/: chars.txt  korean_lines.txt
assets/fonts_korean_v2/train/: 116Watermelon.txt  Cafe24Syongsyong.txt  ChosunSm.txt  DOSIyagi.txt  DOSPilgi.txt  DOSSaemmul.txt  DalseoDarling.txt  DeogonPrincess.txt  Diary.txt  DovemayoWild.txt  FlowerSalt.txt  GabiaBombaram.txt  GabiaSolmee.txt  GamjaFlower.txt  GapyeongWave.txt  GasoekOne.txt  Ghanachocolate.txt  HBIOS-SYS.txt  HSGyoulnoonkot2.0.txt  HSSummer.txt  HSYuji.txt  HakgyoansimDoldam.txt  HakgyoansimUsan.txt  HyunyDororong.txt  IncheonEducationSotong.txt  InkLipquid.txt  InsungitCutelivelyJisu.txt  JHaebaragi.txt  JSongMyung.txt  KCCDodamdodam.txt  KCCHyerim.txt  KCCKimhoon.txt  KCCKimhwanki.txt  KimjungchulScript.txt  KoPubBatang.txt  LOTTERIADDAG.txt  MoiraiOne.txt  NanumBanJjagBanJjagByeor.txt  OKGUNG.txt  Rebecca.txt  (+11 more)
custom_datasets/font_square/: __init__.py  font_square.py  font_square_split.py  font_transforms.py  font_transforms_split.py
custom_datasets/font_square/tps/: README_OPTIMIZATION.md  __init__.py  build.sh  example_usage.py  functions_optimized.py  instance_optimized.py  requirements.txt  setup.py  test_performance.py  tps_cpp.cpp
custom_datasets/real_datasets/: handb_korean.py
models/: autoencoder_loss_q.py  autoencoder_q.py  downsampling.py  origami.py  unet_2d_blocks.py  upsampling.py  vae.py
scripts/: download_pretrained.py
